--- a/style.css
+++ b/style.css
@@ -6,9 +6,247 @@ body{
     text-align: center;
 }
 
+p{
+    font-weight: 700;
+    color: hsl(183, 100%, 15%);
+}
 
+#logo{
+    margin-top: 5rem;
+}
 
+.container{
+    max-width: 100%;
+    border: .1rem solid hsl(0, 0%, 100%);
+    width: 42rem;
+    height: 23rem;
+    border-radius: 1.2rem;
+    background-color: hsl(0, 0%, 100%);
+    margin: 3rem 0rem 0rem 27rem;
+}
 
+#bill{
+    display: flex;
+    justify-content: flex-start;
+    margin-left: 3rem;
+}
+
+input[type="number"] {  
+    margin-left: -20rem;
+    background-color: hsl(189, 41%, 97%); 
+    border: none;
+    width: 16rem;
+    height: 2rem;
+    border-radius: .2rem;
+}
+
+#dollar{
+    margin: -1.7rem 0rem 0rem -33.7rem;
+}
+
+#select-tip{
+    display: flex;
+    justify-content: flex-start;
+    margin: 2rem 0rem 0rem 3rem;
+}
+
+#five-percent{
+    display: flex;
+    max-width: 100%;
+    border: .1rem solid hsl(183, 100%, 15%);
+    width: 5rem;
+    height: 2.2rem;
+    border-radius: .3rem;
+    background-color: hsl(183, 100%, 15%);
+    margin: .8rem 0rem 0rem 3rem;
+    color: hsl(0, 0%, 100%);
+    font-family: 'Space Mono', monospace;
+    font-weight: 700;
+    align-items: center;
+    justify-content: center;
+    border: none;
+}
+
+#five-percent:hover{
+    background-color: hsl(172, 67%, 45%);
+    color: hsl(183, 100%, 15%);
+}
+
+#ten-percent{
+    display: flex;
+    max-width: 100%;
+    border: .1rem solid hsl(183, 100%, 15%);
+    width: 5rem;
+    height: 2.2rem;
+    border-radius: .3rem;
+    background-color: hsl(183, 100%, 15%);
+    margin: -2.2rem 0rem 0rem 8.7rem;
+    color: hsl(0, 0%, 100%);
+    font-family: 'Space Mono', monospace;
+    font-weight: 700;
+    align-items: center;
+    justify-content: center;
+    border: none;
+}
+
+#ten-percent:hover{
+    background-color: hsl(172, 67%, 45%);
+    color: hsl(183, 100%, 15%);
+}
+
+#fifteen-percent{
+    display: flex;
+    max-width: 100%;
+    border: .1rem solid hsl(183, 100%, 15%);
+    width: 5rem;
+    height: 2.2rem;
+    border-radius: .3rem;
+    background-color: hsl(183, 100%, 15%);
+    margin: -2.2rem 0rem 0rem 14.4rem;
+    color: hsl(0, 0%, 100%);
+    font-family: 'Space Mono', monospace;
+    font-weight: 700;
+    align-items: center;
+    justify-content: center;
+    border: none;
+}
+
+#fifteen-percent:hover{
+    background-color: hsl(172, 67%, 45%);
+    color: hsl(183, 100%, 15%);
+}
+
+#twenty-five-percent{
+    display: flex;
+    max-width: 100%;
+    border: .1rem solid hsl(183, 100%, 15%);
+    width: 5rem;
+    height: 2.2rem;
+    border-radius: .3rem;
+    background-color: hsl(183, 100%, 15%);
+    margin: .8rem 0rem 0rem 3rem;
+    color: hsl(0, 0%, 100%);
+    font-family: 'Space Mono', monospace;
+    font-weight: 700;
+    align-items: center;
+    justify-content: center;
+    border: none;
+}
+
+#twenty-five-percent:hover{
+    background-color: hsl(172, 67%, 45%);
+    color: hsl(183, 100%, 15%);
+}
+
+#fifty-percent{
+    display: flex;
+    max-width: 100%;
+    border: .1rem solid hsl(183, 100%, 15%);
+    width: 5rem;
+    height: 2.2rem;
+    border-radius: .3rem;
+    background-color: hsl(183, 100%, 15%);
+    margin: -2.2rem 0rem 0rem 8.7rem;
+    color: hsl(0, 0%, 100%);
+    font-family: 'Space Mono', monospace;
+    font-weight: 700;
+    align-items: center;
+    justify-content: center;
+    border: none;
+}
+
+#fifty-percent:hover{
+    background-color: hsl(172, 67%, 45%);
+    color: hsl(183, 100%, 15%);
+}
+
+#custom{
+    display: flex;
+    max-width: 100%;
+    border: .1rem solid hsl(183, 100%, 15%);
+    width: 5rem;
+    height: 2.2rem;
+    border-radius: .3rem;
+    background-color: hsl(189, 41%, 97%);
+    margin: -2.2rem 0rem 0rem 14.4rem;
+    color: hsl(183, 100%, 15%);
+    font-family: 'Space Mono', monospace;
+    font-weight: 700;
+    text-align: center;
+    border: none;
+    font-size: 1rem;
+}
+
+.sub-container{
+    display: flex;
+    max-width: 100%;
+    border: .1rem solid hsl(183, 100%, 15%);
+    width: 18rem;
+    height: 19rem;
+    border-radius: .8rem;
+    background-color: hsl(183, 100%, 15%);
+    margin: -19rem 0rem 0rem 22rem;
+}
+
+#number-people{
+    display: flex;
+    justify-content: flex-start;
+    margin-left: 3rem;
+}
+
+#person{
+    margin: -1.7rem 0rem 0rem -33.7rem;
+}
+
+#tip-amount{
+    color: hsl(0, 0%, 100%);
+    font-weight: 300;
+    font-size: .7rem;
+    margin: 2rem 0rem 0rem 2rem;
+}
+
+#person1{
+    color: hsl(186, 14%, 43%);
+    font-weight: 300;
+    font-size: .7rem;
+    margin: 3rem 0rem 0rem -4.4rem;
+}
+
+#total{
+    color: hsl(0, 0%, 100%);
+    font-weight: 300;
+    font-size: .7rem;
+    margin: 7rem 0rem 0rem -3.21rem;
+}
+
+#person2{
+    color: hsl(186, 14%, 43%);
+    font-weight: 300;
+    font-size: .7rem;
+    margin: 8rem 0rem 0rem -2.5rem;
+}
+
+#reset{
+    display: flex;
+    max-width: 100%;
+    border: .1rem solid hsl(183, 100%, 15%);
+    width: 15rem;
+    height: 2.2rem;
+    border-radius: .2rem;
+    background-color: hsl(183, 100%, 15%);
+    margin: 15rem 0rem 0rem -3.7rem;
+    color: hsl(0, 0%, 100%);
+    font-family: 'Space Mono', monospace;
+    font-weight: 700;
+    align-items: center;
+    justify-content: center;
+    border: none;
+}
+
+#reset:hover{
+    background-color: hsl(172, 67%, 45%);
+    color: hsl(183, 100%, 15%);
+}
 
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
