--- a/style.css
+++ b/style.css
@@ -34,10 +34,35 @@ p{
 input[type="number"] {  
     margin-left: -20rem;
     background-color: hsl(189, 41%, 97%); 
-    border: none;
+    border: .1rem solid transparent;
     width: 16rem;
     height: 2rem;
     border-radius: .2rem;
+    cursor: pointer;
+    font-family: 'Space Mono', monospace;
+    font-weight: 700;
+    font-size: 1rem;
+}
+
+input[type="number"]:focus { 
+    border: .1rem solid hsl(172, 67%, 45%);
+    outline: none;
+}
+
+input{
+    direction: rtl;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
 
 #dollar{
@@ -65,6 +90,7 @@ input[type="number"] {
     align-items: center;
     justify-content: center;
     border: none;
+    cursor: pointer;
 }
 
 #five-percent:hover{
@@ -87,6 +113,7 @@ input[type="number"] {
     align-items: center;
     justify-content: center;
     border: none;
+    cursor: pointer;
 }
 
 #ten-percent:hover{
@@ -109,6 +136,7 @@ input[type="number"] {
     align-items: center;
     justify-content: center;
     border: none;
+    cursor: pointer;
 }
 
 #fifteen-percent:hover{
@@ -131,6 +159,7 @@ input[type="number"] {
     align-items: center;
     justify-content: center;
     border: none;
+    cursor: pointer;
 }
 
 #twenty-five-percent:hover{
@@ -153,6 +182,7 @@ input[type="number"] {
     align-items: center;
     justify-content: center;
     border: none;
+    cursor: pointer;
 }
 
 #fifty-percent:hover{
@@ -175,6 +205,7 @@ input[type="number"] {
     text-align: center;
     border: none;
     font-size: 1rem;
+    cursor: pointer;
 }
 
 .sub-container{
@@ -233,7 +264,7 @@ input[type="number"] {
     width: 15rem;
     height: 2.2rem;
     border-radius: .2rem;
-    background-color: hsl(183, 100%, 15%);
+    background-color: hsl(172, 67%, 45%);
     margin: 15rem 0rem 0rem -3.7rem;
     color: hsl(0, 0%, 100%);
     font-family: 'Space Mono', monospace;
@@ -241,11 +272,7 @@ input[type="number"] {
     align-items: center;
     justify-content: center;
     border: none;
-}
-
-#reset:hover{
-    background-color: hsl(172, 67%, 45%);
-    color: hsl(183, 100%, 15%);
+    cursor: pointer;
 }
 
 .attribution { font-size: 11px; text-align: center; }
