--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ p{
     max-width: 100%;
     border: .1rem solid hsl(0, 0%, 100%);
     width: 42rem;
-    height: 23rem;
+    height: 22rem;
     border-radius: 1.2rem;
     background-color: hsl(0, 0%, 100%);
     margin: 3rem 0rem 0rem 27rem;
@@ -33,7 +33,7 @@ p{
 }
 
 input[type="number"] {  
-    margin-left: -20.7rem;
+    margin: .2rem 0rem 0rem -20.7rem;
     background-color: hsl(189, 41%, 97%); 
     border: .15rem solid transparent;
     width: 17rem;
@@ -217,13 +217,17 @@ input[type=number] {
     height: 19rem;
     border-radius: .8rem;
     background-color: hsl(183, 100%, 15%);
-    margin: -15.5rem 0rem 0rem 22rem;
+    margin: -18rem 0rem 0rem 22rem;
 }
 
 #number-people{
     display: flex;
     justify-content: flex-start;
     margin-left: 2rem;
+}
+
+#number-people-amount{
+    margin-top: 1.5rem;
 }
 
 /*#number-people-amount:focus{
