--- a/style.css
+++ b/style.css
@@ -259,17 +259,31 @@ input[type=number] {
     margin: 3rem 0rem 0rem -4.4rem;
 }
 
+#money{
+    position: absolute;
+    color: hsl(172, 67%, 45%);
+    margin: 1.3rem 0rem 0rem 8.5rem;
+    font-size: 2.3rem;
+}
+
+#money2{
+    position: absolute;
+    color: hsl(172, 67%, 45%);
+    margin: 6.3rem 0rem 0rem 8.5rem;
+    font-size: 2.3rem;
+}
+
 #tip-amount-num{
     position: absolute;
     color: hsl(172, 67%, 45%);
-    margin: 1.3rem 0rem 0rem 8rem;
+    margin: 1.3rem 0rem 0rem 10rem;
     font-size: 2.3rem;
 }
 
 #total-amount{
     position: absolute;
     color: hsl(172, 67%, 45%);
-    margin: 6.3rem 0rem 0rem 8rem;
+    margin: 6.3rem 0rem 0rem 10rem;
     font-size: 2.3rem;
 }
 
@@ -295,7 +309,7 @@ input[type=number] {
     height: 2.2rem;
     border-radius: .2rem;
     background-color: hsl(172, 67%, 45%);
-    margin: 15rem 0rem 0rem -3.2rem;
+    margin: 15rem 0rem 0rem -3.1rem;
     color: hsl(0, 0%, 100%);
     font-family: 'Space Mono', monospace;
     font-weight: 700;
