--- a/responsiveStyle.css
+++ b/responsiveStyle.css
@@ -134,6 +134,24 @@
         cursor: pointer;
     }
 
+    #customValue{
+        display: flex;
+        max-width: 100%;
+        border: .1rem solid hsl(183, 100%, 15%);
+        width: 5rem;
+        height: 2.2rem;
+        border-radius: .3rem;
+        background-color: transparent;
+        margin: -2rem 0rem 0rem 13.4rem;
+        color: hsl(183, 100%, 15%);
+        font-family: 'Space Mono', monospace;
+        font-weight: 700;
+        text-align: center;
+        border: none;
+        font-size: 1rem;
+        cursor: pointer;
+    }
+
     #number-people-amount{
         margin-top: 1.5rem;
     }
