--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ p{
     height: 22rem;
     border-radius: 1.2rem;
     background-color: hsl(0, 0%, 100%);
-    margin: 3rem 0rem 0rem 27rem;
+    margin: 3rem auto;
 }
 
 #bill{
